// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField should render correctly 1`] = `
<DocumentFragment>
  .cache-a51a0v {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-a51a0v:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-a51a0v>* {
  margin: 6px;
}

.cache-11neoz9 {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-11neoz9::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-11neoz9::-moz-placeholder {
  color: #b2b6c3;
}

.cache-11neoz9:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-11neoz9::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-a51a0v"
    >
      <input
        aria-label="test"
        class="cache-11neoz9"
        name="test"
        placeholder="placeholder"
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-a51a0v {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-a51a0v:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-a51a0v>* {
  margin: 6px;
}

<form
    novalidate=""
  >
    <div
      class="cache-a51a0v"
    />
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with default tags 1`] = `
<DocumentFragment>
  .cache-a51a0v {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-a51a0v:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-a51a0v>* {
  margin: 6px;
}

.cache-qipwns {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-td7tdt {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-1iwibob-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.cache-1iwibob-StyledButton:hover,
.cache-1iwibob-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1iwibob-StyledButton>svg {
  pointer-events: none;
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-11neoz9 {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-11neoz9::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-11neoz9::-moz-placeholder {
  color: #b2b6c3;
}

.cache-11neoz9:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-11neoz9::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-a51a0v"
    >
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          tags-1
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 em6gco80 cache-1iwibob-StyledButton"
          type="button"
        >
          <div
            class="cache-brwenz em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          tags-2
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 em6gco80 cache-1iwibob-StyledButton"
          type="button"
        >
          <div
            class="cache-brwenz em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <input
        aria-label="test-tags"
        class="cache-11neoz9"
        name="test-tags"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;
